--- a/.github/workflows/pr-title-check.yml
+++ b/.github/workflows/pr-title-check.yml
@@ -16,9 +16,9 @@ jobs:
           // The pattern for JIRA ticket format
           const jiraPattern = /[A-Z]+-\d+/g
           if (!jiraPattern.test(prTitle)) {
-            console.log('The PR title does not match JIRA ticket format! - MAIN')
+            console.log('The PR title does not match JIRA ticket format! - TEST 2')
             // Fails the workflow
-            core.setFailed('PR title does not match JIRA ticket format! - MAIN')
+            core.setFailed('PR title does not match JIRA ticket format! - TEST 2')
           } else {
             console.log('PR title format is correct.')
           }
