--- a/.github/workflows/pr-title-check.yml
+++ b/.github/workflows/pr-title-check.yml
@@ -17,9 +17,9 @@ jobs:
           #const jiraPattern = /[A-Z]+-\d+/g
           const jiraPattern = /^(Revert ")?\[(XBMAPI|XBMPUR|XBMSAL|XAAC|XBMSTA|SALXAA|XBR|XIT|MOBPLAT)-\D{1,4}\]/
           if (!jiraPattern.test(prTitle)) {
-            console.log('The PR title does not match JIRA ticket format! - new branch - TESTING AGAIN')
+            console.log('The PR title does not match JIRA ticket format! - test 1')
             // Fails the workflow
-            core.setFailed('PR title does not match JIRA ticket format!')
+            core.setFailed('PR title does not match JIRA ticket format! - test 1')
           } else {
             console.log('PR title format is correct. - new branch')
           }
