--- a/.github/workflows/pr-title-check.yml
+++ b/.github/workflows/pr-title-check.yml
@@ -14,7 +14,7 @@ jobs:
           const payload = context.payload
           const prTitle = payload.pull_request.title
           // The pattern for JIRA ticket format
-          const jiraPattern = /^(Revert ")?\[(XBMAPI|XBMPUR|XBMSAL|XAAC|XBMSTA|SALXAA|XBR|XIT|MOBPLAT)-\D{1,4}\]/
+          const jiraPattern = /^(Revert ")?\[(XBMAPI|XBMPUR|XBMSAL|XAAC|XBMSTA|SALXAA|XBR|XIT|MOBPLAT)-\d{1,4}\]/
           if (!jiraPattern.test(prTitle)) {
             console.log('The PR title does not match JIRA ticket format! - test 1')
             // Fails the workflow
