--- a/.github/workflows/validate-jira-title.yml
+++ b/.github/workflows/validate-jira-title.yml
@@ -15,6 +15,7 @@ jobs:
               uses: actions/github-script@v7.0.1
               env:
                 TITLE: ${{ github.event.pull_request.title }}
+                LABELS: ${{ github.event.pull_request.labels}}
               with:
                 result-encoding: string
                 github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -24,7 +25,7 @@ jobs:
 
                     if (!titleStartsWithAJira){
                         const title = "Missing JIRA in the title";
-                        if (github.event.pull_request.labels.find(label => label.name === 'documentation')){
+                        if (process.env.LABELS.find(label => label.name === 'documentation')){
                             const body = 'There was no JIRA found in the title. However, as these are documentation only changes it is not required.';
                             console.warn(` ${title} - ${body}`);
                         }else{
