--- a/.github/workflows/validate-jira-title.yml
+++ b/.github/workflows/validate-jira-title.yml
@@ -21,12 +21,15 @@ jobs:
                 script: |
                     const jiraRegex = /^(Revert ")?\[(XBMAPI|XBMPUR|XBMSAL|XAAC|XBMSTA|SALXAA|XBR|XIT|MOBPLAT)-\d{1,4}\]/;
                     const titleStartsWithAJira = jiraRegex.test(process.env.TITLE);
+                    const labels = github.context.payload.pull_request.labels.map(label => label.name);
 
-                    if (!titleStartsWithAJira){
+                    if (!titleStartsWithAJira and !labels.includes('documentation')){
                         const title = "Missing JIRA in the title";
                         const body = 'The title of this PR needs to start with a JIRA e.g. [PROJECT-1234] My PR';
                             console.error(` ${title} - ${body} `);
                             process.exit(1);
+                    }else if (!titleStartsWithAJira and labels.includes('documentation')){
+                        console.error("Your title does not include a JIRA but seeing it is only documentation that is ok");
                     }
 
                     
